Landing page alignment issue fixed.

--- a/src/app/client/src/app/modules/shared/components/card/card.component.scss
+++ b/src/app/client/src/app/modules/shared/components/card/card.component.scss
@@ -81,7 +81,7 @@ img {
 }
 .sb-content-pin .grid .content-pin-img div.content-pin-inner img {
   max-width: 100%;
-  height: 220px;
+  height: 200px;
   width: 100%;
 }
 .sb-content-pin .grid .content-pin-img div.content-pin-inner {
@@ -129,7 +129,7 @@ img {
   border-radius:5px;
   cursor: pointer;
   &.sb-content-pin {
-    height: 405px !important;
+    height: 380px !important;
     font-size: 12px;
     color: #888;
   }
